tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@component_def_in_other_tag.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/component_def_in_other_tag.txt
---
error: Component definitions cannot be written in another tag.
 --> component_def_in_other_tag.txt:2:4
  |
2 | {% component popup() -%} hello {%- endcomponent %}
  |    ^^^^^^^^^
